@@ -11,6 +11,9 @@ PyObjC NEWS</title>
 <p>An overview of the relevant changes in new, and older, releases.</p>
 <h2><a name="version-1-3-1-2005-04">Version 1.3.1 (2005-04-??)</a></h2>
 <ul>
+<li>New <code><span>objc.removeAutoreleasePool</span></code> function that will remove
+PyObjC's global NSAutoreleasePool, which is particularly useful
+for plugins.</li>
 <li>Synchronize implementation of <code><span>objc.inject</span></code> with mach_* 1.1.
 Now injects on main thread by default, takes third useMainThread
 argument to change this behavior.</li>
