@@ -7,6 +7,10 @@ An overview of the relevant changes in new, and older, releases.
 Version 1.3.1 (2005-04-??)
 --------------------------
 
+- New ``objc.removeAutoreleasePool`` function that will remove
+  PyObjC's global NSAutoreleasePool, which is particularly useful
+  for plugins.
+
 - Synchronize implementation of ``objc.inject`` with mach_* 1.1.
   Now injects on main thread by default, takes third useMainThread
   argument to change this behavior.
